feat: 将API密钥配置改为URL拉取方式
- 将环境变量 VITE_FAL_API_KEYS 改为 VITE_FAL_API_KEYS_URL
- 新增 fetchApiKeysFromUrl() 函数，支持从URL拉取密钥文件
- 支持新的密钥文件格式：每行一个密钥，支持注释行和空行过滤
- 更新 ApiKeyManager 组件，在应用启动时自动拉取系统密钥
- 更新环境变量配置文件和文档说明
- 添加错误处理和用户提示功能
- 保持向后兼容性，未配置URL时跳过拉取

密钥文件格式示例：
9263a18e-28f9-4af7-9905-0f17621d4d3a:04ee433e91cdd23e5ac116231a954819
fal.xxxxxx
# 支持注释行
// 也支持双斜杠注释

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# FAL.AI API密钥
-# 可以配置多个密钥，用逗号分隔，例如：VITE_FAL_API_KEYS=fal.xxxxxx,fal.yyyyyy
-VITE_FAL_API_KEYS=fal.xxxxxx
+# FAL.AI API密钥文件URL
+# 配置一个包含API密钥的文件URL，文件内容格式为每行一个密钥
+# 例如：VITE_FAL_API_KEYS_URL=https://example.com/api-keys.txt
+VITE_FAL_API_KEYS_URL=https://example.com/api-keys.txt
 
 # Supabase配置
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
